# tiddly

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  Dockerfile.api  LICENSE.md  Makefile  PRIVACY.md  README.md  README_DEPLOY.md  TERMS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: backend-tests.yaml  chrome-ext-tests.yaml  cli-release.yaml  deploy.yml  extension-tests.yaml  frontend-tests.yaml  tests.yaml
ai-instructions/: implementation-guide.md
backend/scripts/: clerk_import.py  seed_data.py
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/core/: auth.py  (+10 more)
backend/tests/: conftest.py  test_consent.py  test_content_chunks_schema.py  test_database.py  test_search_vector.py
chrome-extension/: README.md  background-core.js  background.js  manifest.json  options.css  options.html  options.js  package-lock.json  package.json  popup-core.js  popup.css  popup.html  popup.js  vitest.config.js
chrome-extension/store-assets/: build.py
chrome-extension/test/: background-core.test.js  manifest.test.js  options.test.js  popup-core.test.js  popup.test.js  setup.js
clerk/: README.md  config.dev.json
cli/: .golangci.yml  .goreleaser.yaml  README.md  agent_testing_procedure.md  agent_testing_procedure_prompt.md  go.mod  go.sum  install.sh  main.go
cli/cmd/: ai_instructions.go  ai_instructions_test.go  auth.go  auth_test.go  completion.go  completion_test.go  config.go  config_test.go  export.go  export_test.go  login.go  login_test.go  logout.go  logout_test.go  main_test.go  mcp.go  mcp_test.go  root.go  root_test.go  skills.go  skills_test.go  status.go  status_test.go  tokens.go  tokens_test.go  update.go  update_check.go  update_check_test.go  update_test.go  upgrade.go  upgrade_test.go
cli/test_procedure/: README.md  lib.sh  per_call.sh  phase0_setup.sh
cli/tests_agentic/: README.md  agent_instructions.md  lib.sh  per_call.sh  phase0_setup.sh
deploy/: api.Dockerfile  frontend.Dockerfile  mcp.Dockerfile  nginx.conf  railway.toml
docs/: ai-integration.md  architecture.md  auth0-clerk-ledger.md  connection-pool-tuning.md  content-versioning.md  custom-domain-setup.md  http-caching.md  ios-clerk-migration-guide.md  vector-db-and-semantic-search.md
docs/evals/: mcp_tools_eval.ipynb  mcp_tools_example.ipynb
docs/implementation_plans/: 2025-12-09-bookmarks-goal.md  2025-12-09-bookmarks.md  2025-12-14-delete-archive-bookmarks.md  2025-12-15-settings-page-and-lists.md  2025-12-16-refactor-bookmarks-page.md  2025-12-16-tags-refactor.md  2025-12-17-mcp.md  2025-12-20-privacy-and-tos.md  2025-12-21-backend-consent-enforcement.md  2025-12-21-chrome-extension.md  2025-12-21-pdf-scraper.md  2025-12-22-lists-have-own-order.md  2025-12-23-rate-limit-and-redis.md  2025-12-25-frontend-caching.md  2025-12-26-auto-archive.md  2025-12-26-notes.md  2025-12-28-mcp-notes.md  2025-12-28-sidebar-order.md  2025-12-31-content-relationships.md  2026-01-01-prompt-mcp-server-prompt-first.md  2026-01-03-prompts-base-entity-service.md  2026-01-03-prompts-mcp-server.md  2026-01-06-id-UUIDv7.md  2026-01-06-public-id.md  2026-01-07-milkdown-markdown.md  2026-01-10-content-refactor.md  2026-01-10-group-list-rename.md  2026-01-11-try-prompt.md  2026-01-13-link-improvements.md  2026-01-14-favicon-refactor.md  2026-01-18-http-caching.md  2026-01-19-editing-content.md  2026-01-20-mcp-server-improvements.md  2026-01-21-mcp-name-content-improvements.md  2026-01-21-mcp-server-improvements.md  2026-01-22-change-detection.md  2026-01-23-filter-sort-fallback.md  2026-01-24-error-handling-refactor-notes.md  2026-01-24-mcp-update-tools.md  2026-01-25-filter-tag-relationship.md  (+79 more)
evals/: LEARNINGS.md  README.md  __init__.py  conftest.py  utils.py
evals/ai_suggestions/: __init__.py  config_suggest_arguments.yaml  config_suggest_metadata.yaml  config_suggest_prompt_argument_fields.yaml  config_suggest_prompt_arguments.yaml  config_suggest_relationships.yaml  config_suggest_tags.yaml  conftest.py  helpers.py  test_suggest_arguments.py  test_suggest_metadata.py  test_suggest_prompt_argument_fields.py  test_suggest_prompt_arguments.py  test_suggest_relationships.py  test_suggest_tags.py
evals/content_mcp/: __init__.py  config.yaml  config_edit_content.yaml  config_update_item.yaml  conftest.py  schema_snapshot.py  test_edit_content.py  test_update_item.py
evals/prompt_mcp/: __init__.py  config_edit_prompt_content.yaml  config_edit_prompt_template.yaml  config_update_prompt.yaml  conftest.py  test_edit_prompt_content.py  test_edit_prompt_template.py  test_update_prompt.py
evals/viewer/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/: .env.example  Caddyfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/plugins/: dataContent.ts  proseContent.ts
frontend/public/: llms-app-usage.txt  llms-cli-instructions.txt  llms-integration.txt  llms.txt
frontend/src/: App.redirects.test.tsx  App.test.tsx  App.tsx  config.test.ts  config.ts  index.css  main.tsx  queryClient.ts  routePrefetch.test.ts  routePrefetch.ts  test-utils.tsx  types.ts  utils.test.ts  utils.ts
performance/: performance_prompt.md
performance/api/: README.md  benchmark.py
performance/diff/: README.md  benchmark.py
performance/profiling/: README.md  isolate_bottleneck.py  middleware_impact.py  middleware_with_io.py  minimal_baseline.py  profile.py
sandbox/: litellm.ipynb
sandbox/cosine_viability/: README.md  __init__.py  config.py  data_gen.py  handoff.py  instrumentation.py  main.py  phase0-handoff-super-power.md  phase0-handoff-typical-power.md  queries.py  railway.json  requirements.txt  scenarios.py  schema.py  seed.py
src/api/: main.py
src/core/: auth.py  config.py
src/models/: __init__.py  api_token.py  bookmark.py  user.py
src/schemas/: bookmark.py  token.py
src/services/: bookmark_service.py  token_service.py  url_scraper.py
tests/: conftest.py
tests/api/: test_bookmarks.py  test_tokens.py
tests/services/: __init__.py  test_url_scraper.py
(+1136 files in other folders)
