[project]
name = "bookmarks"
version = "0.1.0"
description = "A bookmark management system with tagging and search capabilities."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.1.8",
    "cryptography>=46.0.3",
    "fastapi>=0.124.2",
    "fastmcp>=2.14.1",
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-timeout>=2.3.1",
    "ruff>=0.11.0",
    "pip>=25.0.1",
    "ipykernel>=6.29.5",
    "testcontainers>=4.13.3",
    "respx>=0.22.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend/src/api", "backend/src/core", "backend/src/db", "backend/src/models", "backend/src/schemas", "backend/src/services"]

[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
timeout = 60
timeout_method = "signal"  # note this only works on unix; "thread" method (default) is safer but might not catch hanging subprocesses
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # testcontainers library uses deprecated @wait_container_is_ready decorator internally
    # in PostgresContainer._connect() and DbContainer - this is not fixable from our code.
    # The library needs to migrate to waiting_for(LogMessageWaitStrategy(...)) API.
    # See: https://github.com/testcontainers/testcontainers-python
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]
